@@ -117,9 +117,8 @@ bool Iteration::stabilize(const Residuals& r, unsigned int n)
   //   j = 1 : last stabilizing iteration
   //   j > 1 : still stabilizing
 
-  // FIXME: changed here
   // Make at least one iteration before stabilizing
-  if ( n < 2 )
+  if ( n < 1 )
     return false;
   
   switch ( j ) {
